Fix google doc survey link

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </ul>
                 <a
                   class="btn fw-500 btn-primary rounded-pill"
-                  href="https://forms.gle/xkXZvbPWfmzx3TX76"
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSenNG4oXOB1DHyAP3ZesHcgKlFWz08BSgSd5sxDkc62jkAsYg/viewform"
                   target="_blank"
                 >
                   <i class="fas fa-cloud"></i>
@@ -1111,7 +1111,7 @@
                     <p>
                       <a
                         class="btn btn-primary fw-500"
-                        href="https://forms.gle/xkXZvbPWfmzx3TX76"
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSenNG4oXOB1DHyAP3ZesHcgKlFWz08BSgSd5sxDkc62jkAsYg/viewform"
                         target="_blank"
                         >Sign Up for the Waitlist!</a
                       >
