--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="layoutDefault_content">
       <main>
         <!-- Navbar-->
-        <nav class="navbar navbar-marketing navbar-expand-lg bg-transparent navbar-light fixed-top">
+        <nav class="navbar navbar-marketing navbar-expand-lg bg-transparent navbar-light fixed-top flex-column">
           <div class="container px-5">
             <a class="navbar-brand text-primary" href="index.html"><img src="images/omd-logo.svg" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -66,6 +66,12 @@
                 <i class="fas fa-cloud"></i>
               </a>
             </div>
+          </div>
+          <div class="feature-strip">
+            The power-packed 0.9 release is here. Watch the <a href="https://www.youtube.com/watch?v=cZdIobCpI9U"
+              target="_blank">demo</a> or <a
+              href="https://blog.open-metadata.org/openmetadata-0-9-0-release-8e7b93ab1882" target="_blank">read
+              more</a>.
           </div>
         </nav>
         <!-- Page Header-->
@@ -601,6 +607,12 @@
                   <h5>DynamoDB</h5>
                 </a>
               </div>
+              <div class="col-lg-2 col-md-3 mb-4 text-center" data-aos="fade-up">
+                <a href="#" target="_blank">
+                  <img src="images/services/sqllite.png" class="media-img mb-2" />
+                  <h5>SQL Lite</h5>
+                </a>
+              </div>
             </div>
           </div>
           <!-- <div class="svg-border-rounded text-light">
@@ -655,17 +667,16 @@
             </div>
             <div class="row gx-5 mb-5">
               <div class="col-lg-4 mb-5">
-                <a class="card lift h-100"
-                  href="https://blog.open-metadata.org/building-access-control-for-openmetadata-5b842a2abd90"
+                <a class="card lift h-100" href="https://blog.open-metadata.org/openmetadata-0-9-0-release-8e7b93ab1882"
                   target="_blank">
-                  <img class="card-img-top" src="./images/RBAC.png" />
+                  <img class="card-img-top" src="./images/v0.9.0.jpg" />
                   <div class="card-body">
                     <h4 class="card-title mb-2">
-                      Building Access Control for OpenMetadata
+                      OpenMetadata 0.9.0 Release
                     </h4>
                     <p class="card-text">
-                      we introduced Access Control for governing access for
-                      users that perform metadata operations.
+                      Data Collaboration via Activity Feeds and Conversation Threads, Data Quality and Tests, Glossary
+                      Support , New Connectors and Lineage Support for many data sources.
                     </p>
                   </div>
                   <div class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between">
@@ -681,17 +692,18 @@
                   </div>
                 </a>
               </div>
+
               <div class="col-lg-4 mb-5">
-                <a class="card lift h-100" href="https://blog.open-metadata.org/openmetadata-0-8-0-release-ca09bd2fbf54"
+                <a class="card lift h-100" href="https://blog.open-metadata.org/ml-is-not-just-about-ml-c08eab242e84"
                   target="_blank">
-                  <img class="card-img-top" src="./images/v0.8.0.jpg" />
+                  <img class="card-img-top" src="images/blogml.jpg" />
                   <div class="card-body">
                     <h4 class="card-title mb-2">
-                      OpenMetadata 0.8.0 Release
+                      ML is not just about ML
                     </h4>
                     <p class="card-text">
-                      Event Notification via Webhooks, Slack Integration,
-                      Access Control Policy, and Manual Lineage.
+                      There has been a massive increase in everything around ML — new algorithms, new frameworks, new
+                      tools, and new roles and positions
                     </p>
                   </div>
                   <div class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between">
@@ -710,16 +722,16 @@
 
               <div class="col-lg-4 mb-5">
                 <a class="card lift h-100"
-                  href="https://blog.open-metadata.org/why-openmetadata-is-the-right-choice-for-you-59e329163cac"
+                  href="https://blog.open-metadata.org/building-access-control-for-openmetadata-5b842a2abd90"
                   target="_blank">
-                  <img class="card-img-top" src="./images/why-om.png" />
+                  <img class="card-img-top" src="./images/RBAC.png" />
                   <div class="card-body">
                     <h4 class="card-title mb-2">
-                      Why OpenMetadata is the Right Choice for you
+                      Building Access Control for OpenMetadata
                     </h4>
                     <p class="card-text">
-                      What generation of metadata systems is OpenMetadata? Are
-                      you pull-based, push-based, or hybrid?
+                      we introduced Access Control for governing access for
+                      users that perform metadata operations.
                     </p>
                   </div>
                   <div class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between">
