--- a/community.html
+++ b/community.html
@@ -199,7 +199,13 @@
             <div class="row gx-5 justify-content-center">
               <div class="col-lg-8">
                 <div class="text-center mb-5">
-                  <h2 class="section-header fw-600">OpenMetadata Webinar</h2>
+                  <h2 class="section-header fw-600">OpenMetadata Webinars</h2>
+                </div>
+              </div>
+            </div>
+            <div class="row gx-5 justify-content-center">
+              <div class="col-lg-6">
+                <div class="text-center mb-5">
                   <p class="lead">
                     Get Up and Running with OpenMetadata, Metadata Ingestion,
                     and Data Discovery
@@ -209,20 +215,20 @@
                   </p>
                 </div>
               </div>
+              <div class="col-lg-6">
+                <div class="text-center mb-5">
+                  <p class="lead">
+                    How to Set up Integrations for Metadata Ingestion, Usage & Lineage, and Data Quality in OpenMetadata
+                  </p>
+                  <p>
+                    <a class="btn btn-primary" href="https://www.youtube.com/watch?v=rB77sPtPtJ4" target="_blank">Watch
+                      the Webinar</a>
+                  </p>
+                </div>
+              </div>
             </div>
             <div class="row gx-5 justify-content-center">
               <div class="col-lg-8" data-aos="fade-up">
-                <!-- <div class="card">
-                                    <div class="card-body p-2">
-                                        <div class="video bg-img-cover rounded">
-                                            <iframe width="100%" height="325"
-                                                src="https://www.youtube.com/embed/rhQKRW54tyg"
-                                                title="YouTube video player" frameborder="0"
-                                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                                allowfullscreen></iframe>
-                                        </div>
-                                    </div>
-                                </div> -->
                 <img src="images/webinar.png" class="img-fluid" />
               </div>
             </div>
@@ -230,11 +236,8 @@
               <div class="col-lg-8">
                 <div class="text-center mt-5">
                   <p class="lead">
-                    Watch our webinar on metadata ingestion and data
-                    discovery. Base your business decisions on the right data!
-                    Check out how to set up a connector, find assets and
-                    evaluate descriptive metadata, importance, lineage, and
-                    usage information.
+                    Watch our webinars on metadata ingestion, data discovery, usage, lineage, and data quality tests.
+                    Base your business decisions on the right data!
                   </p>
                 </div>
               </div>
