--- a/community.html
+++ b/community.html
@@ -203,35 +203,37 @@
                 </div>
               </div>
             </div>
-            <div class="row gx-5 justify-content-center">
-              <div class="col-lg-6">
-                <div class="text-center mb-5">
-                  <p class="lead">
-                    Get Up and Running with OpenMetadata, Metadata Ingestion,
-                    and Data Discovery
-                  </p>
-                  <p>
-                    <a class="btn btn-primary" href="https://youtu.be/rhQKRW54tyg" target="_blank">Watch the Webinar</a>
-                  </p>
+            <div class="row gx-5">
+              <div class="col">
+                <div class="card">
+                  <div class="card-body">
+                    <iframe width="100%" height="325" src="https://www.youtube.com/embed/rhQKRW54tyg"
+                      title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen></iframe>
+                    <p class="fw-600 mb-0 mt-2">Get Up and Running with OpenMetadata, Metadata Ingestion,
+                      and Data Discovery</p>
+                  </div>
                 </div>
               </div>
-              <div class="col-lg-6">
-                <div class="text-center mb-5">
-                  <p class="lead">
-                    How to Set up Integrations for Metadata Ingestion, Usage & Lineage, and Data Quality in OpenMetadata
-                  </p>
-                  <p>
-                    <a class="btn btn-primary" href="https://www.youtube.com/watch?v=rB77sPtPtJ4" target="_blank">Watch
-                      the Webinar</a>
-                  </p>
+              <div class="col">
+                <div class="card">
+                  <div class="card-body">
+                    <iframe width="100%" height="325" src="https://www.youtube.com/embed/rB77sPtPtJ4"
+                      title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen></iframe>
+                    <p class="fw-600 mb-0 mt-2">How to Set up Integrations for Metadata Ingestion, Usage & Lineage, and
+                      Data Quality in OpenMetadata</p>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="row gx-5 justify-content-center">
+            <!-- <div class="row gx-5 justify-content-center">
               <div class="col-lg-8" data-aos="fade-up">
                 <img src="images/webinar.png" class="img-fluid" />
               </div>
-            </div>
+            </div> -->
             <div class="row gx-5 justify-content-center">
               <div class="col-lg-8">
                 <div class="text-center mt-5">
