--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                     <a class="nav-link" href="community.html">Community</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="newsroom.html">Newsroom</a>
+                  </li>
+                  <li class="nav-item">
                     <a
                       class="nav-link"
                       href="https://sandbox.open-metadata.org/signin"
