--- a/newsroom.html
+++ b/newsroom.html
@@ -10,7 +10,7 @@
   <meta name="keywords"
     content="metadata, data collaboration, metadata community, data discovery, data collaboration" />
   <meta name="author" content="" />
-  <title>OpenMetadata Community</title>
+  <title>OpenMetadata Newsroom</title>
   <link href="css/styles.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/aos.css" />
   <link rel="icon" type="image/x-icon" href="images/favicon.png" />
