--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         <iframe
                           width="100%"
                           height="350"
-                          src="https://www.youtube.com/embed/3xaHf3A2PgU"
+                          src="https://www.youtube.com/embed/pF8L_mAtexo"
                           title="YouTube video player"
                           frameborder="0"
                           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
