--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <div class="col-lg-8">
                   <div class="display-5 mb-3 text-dark">Why OpenMetadata?</div>
                   <h4>
-                    Get to know OpenMetadata in less than 3 minutes. Watch the
+                    Get to know OpenMetadata in few minutes. Watch the
                     data discovery, data profiler, and lineage features in
                     action.
                   </h4>
