--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <meta name="author" content="" />
     <title>
-      OpenMetadata: Data Discovery, Profiling, Collaboration, Lineage, etc.
+      OpenMetadata: Data Discovery, Profiling, Collaboration, Lineage.
     </title>
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/aos.css" />
