Change Fetaure Strip Content

--- a/index.html
+++ b/index.html
@@ -114,17 +114,15 @@
               </div>
             </div>
             <div class="feature-strip">
-              The power-packed <strong>OpenMetadata 0.9 Release</strong> is
+              The power-packed <strong>OpenMetadata 0.10 Release</strong> is
               here. Watch the
               <a
-                href="https://www.youtube.com/watch?v=cZdIobCpI9U"
+                href="https://www.youtube.com/c/OpenMetadataChannel"
                 target="_blank"
                 >demo</a
               >
               or
-              <a
-                href="https://blog.open-metadata.org/openmetadata-0-9-0-release-8e7b93ab1882"
-                target="_blank"
+              <a href="https://blog.open-metadata.org/" target="_blank"
                 >read more</a
               >.
             </div>
@@ -212,9 +210,8 @@
                 <div class="col-lg-8">
                   <div class="display-5 mb-3 text-dark">Why OpenMetadata?</div>
                   <h4>
-                    Get to know OpenMetadata in few minutes. Watch the
-                    data discovery, data profiler, and lineage features in
-                    action.
+                    Get to know OpenMetadata in few minutes. Watch the data
+                    discovery, data profiler, and lineage features in action.
                   </h4>
                 </div>
               </div>
