Change open graph title and description for home and community page

--- a/community.html
+++ b/community.html
@@ -16,13 +16,10 @@
       content="metadata, data collaboration, metadata community, data discovery, data collaboration"
     />
     <meta name="author" content="open-metadata" />
-    <meta
-      property="og:title"
-      content="OpenMetadata - Open Standard for Metadata"
-    />
+    <meta property="og:title" content="OpenMetadata Community" />
     <meta
       property="og:description"
-      content="A Single place to Discover, Collaborate, and Get your data right."
+      content="Join OpenMetadata meetings, webinars, & connect on Slack for updates on data discovery, governance, data quality, observability, and people collaboration."
     />
     <meta property="og:image" content="images/favicon.png" />
     <title>OpenMetadata Community</title>
