--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <meta name="author" content="open-metadata" />
     <meta
       property="og:title"
-      content="OpenMetadata - Open Standard for Metadata"
+      content="OpenMetadata: Data Discovery, Profiling, Collaboration, Lineage."
     />
     <meta
       property="og:description"
-      content="A Single place to Discover, Collaborate, and Get your data right."
+      content="An end-to-end metadata management solution that includes data discovery, governance, data quality, observability, and people collaboration."
     />
     <meta property="og:image" content="images/favicon.png" />
     <title>
