Fix site seo issues - part2

--- a/community.html
+++ b/community.html
@@ -16,12 +16,36 @@
       content="metadata, data collaboration, metadata community, data discovery, data collaboration"
     />
     <meta name="author" content="open-metadata" />
+
+    <!-- Open Graph tags start -->
     <meta property="og:title" content="OpenMetadata Community" />
     <meta
       property="og:description"
       content="Join OpenMetadata meetings, webinars, & connect on Slack for updates on data discovery, governance, data quality, observability, and people collaboration."
     />
-    <meta property="og:image" content="images/favicon.png" />
+    <meta
+      property="og:image"
+      content="https://open-metadata.org/images/favicon.png"
+    />
+    <meta property="og:type" content="metadata tool" />
+    <meta property="og:url" content="https://open-metadata.org" />
+    <!-- Open Graph tags end -->
+
+    <!-- Twitter Card start -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="https://open-metadata.org" />
+    <meta name="twitter:title" content="OpenMetadata Community" />
+    <meta
+      name="twitter:description"
+      content="Join OpenMetadata meetings, webinars, & connect on Slack for updates on data discovery, governance, data quality, observability, and people collaboration."
+    />
+    <meta
+      name="twitter:image"
+      content="https://open-metadata.org/images/favicon.png"
+    />
+
+    <!-- Twitter Card end -->
+
     <title>OpenMetadata Community</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/aos.css" />
