--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       content="metadata, data discovery, data collaboration, metadata lineage, data governance"
     />
     <meta name="author" content="open-metadata" />
+
+    <!-- Open Graph tags start -->
     <meta
       property="og:title"
       content="OpenMetadata: Data Discovery, Profiling, Collaboration, Lineage."
@@ -24,7 +26,32 @@
       property="og:description"
       content="An end-to-end metadata management solution that includes data discovery, governance, data quality, observability, and people collaboration."
     />
-    <meta property="og:image" content="images/favicon.png" />
+    <meta
+      property="og:image"
+      content="https://open-metadata.org/images/favicon.png"
+    />
+    <meta property="og:type" content="metadata tool" />
+    <meta property="og:url" content="https://open-metadata.org" />
+    <!-- Open Graph tags end -->
+
+    <!-- Twitter Card start -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="https://open-metadata.org" />
+    <meta
+      name="twitter:title"
+      content="OpenMetadata: Data Discovery, Profiling, Collaboration, Lineage."
+    />
+    <meta
+      name="twitter:description"
+      content="An end-to-end metadata management solution that includes data discovery, governance, data quality, observability, and people collaboration."
+    />
+    <meta
+      name="twitter:image"
+      content="https://open-metadata.org/images/favicon.png"
+    />
+
+    <!-- Twitter Card end -->
+
     <title>
       OpenMetadata: Data Discovery, Profiling, Collaboration, Lineage.
     </title>
