Fix seo issues part-3

--- a/index.html
+++ b/index.html
@@ -1564,5 +1564,19 @@
         once: true,
       });
     </script>
+    <!-- Social Media Engagement - Off page SEO -->
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "Open-Metadata",
+        "url": "https://open-metadata.org/",
+        "address": "Saratoga, California",
+        "sameAs": [
+          "https://twitter.com/open_metadata",
+          "https://www.linkedin.com/company/collateinc"
+        ]
+      }
+    </script>
   </body>
 </html>
