Fix Developed By netflify to Deployed By

--- a/index.html
+++ b/index.html
@@ -1531,7 +1531,7 @@
               </div>
               <div class="col-lg-2">
                 <div class="text-uppercase-expanded text-xs mb-2">
-                  Developed By
+                  Deployed By
                 </div>
                 <img src="images/netlify.png" width="120" alt="netlify-png" />
               </div>
