Add lazy loading for images

--- a/community.html
+++ b/community.html
@@ -80,9 +80,9 @@
             class="navbar navbar-marketing navbar-expand-lg bg-transparent navbar-light fixed-top"
           >
             <div class="container px-5">
-              <a class="navbar-brand text-primary" href="index.html"
-                ><img alt="omd-logo" src="images/omd-logo.svg"
-              /></a>
+              <a class="navbar-brand text-primary" href="index.html">
+                <img alt="omd-logo" src="images/omd-logo.svg" loading="lazy" />
+              </a>
               <button
                 class="navbar-toggler"
                 type="button"
@@ -157,6 +157,7 @@
                       class="img-fluid"
                       src="images/community.png"
                       alt="community"
+                      loading="lazy"
                     />
                   </div>
                   <div class="col-lg-6" data-aos="fade-up">
@@ -193,6 +194,7 @@
                           src="images/icon-slack.svg"
                           height="18"
                           alt="slack"
+                          loading="lazy"
                         />&nbsp; Join our Slack</a
                       >
                     </div>
@@ -240,6 +242,7 @@
                     src="images/meetups.png"
                     class="img-fluid"
                     alt="meetups"
+                    loading="lazy"
                   />
                 </div>
               </div>
@@ -419,7 +422,11 @@
             <div class="row gx-5">
               <div class="col-lg-3">
                 <div class="footer-brand">
-                  <img src="images/omd-logo-footer.svg" alt="omd-footer-logo" />
+                  <img
+                    src="images/omd-logo-footer.svg"
+                    alt="omd-footer-logo"
+                    loading="lazy"
+                  />
                 </div>
                 <div class="mb-3">
                   Open Standard for Metadata with a Centralized Metadata Store.
@@ -499,7 +506,12 @@
                 <div class="text-uppercase-expanded text-xs mb-2">
                   Developed By
                 </div>
-                <img src="images/netlify.png" width="120" alt="netlify" />
+                <img
+                  src="images/netlify.png"
+                  width="120"
+                  alt="netlify"
+                  loading="lazy"
+                />
               </div>
             </div>
             <hr class="my-5" />
