Update SaaS sign-up form link

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </ul>
                 <a
                   class="btn fw-500 btn-primary rounded-pill"
-                  href="https://docs.google.com/forms/d/e/1FAIpQLSenNG4oXOB1DHyAP3ZesHcgKlFWz08BSgSd5sxDkc62jkAsYg/viewform"
+                  href="https://share.hsforms.com/1fstvMCeZRZKTYA4nG1VTPgcq0j9"
                   target="_blank"
                 >
                   <i class="fas fa-cloud"></i>
@@ -1320,7 +1320,7 @@
                     <p>
                       <a
                         class="btn btn-primary fw-500"
-                        href="https://docs.google.com/forms/d/e/1FAIpQLSenNG4oXOB1DHyAP3ZesHcgKlFWz08BSgSd5sxDkc62jkAsYg/viewform"
+                        href="https://share.hsforms.com/1fstvMCeZRZKTYA4nG1VTPgcq0j9"
                         target="_blank"
                         >Sign Up for the Waitlist!</a
                       >
