--- a/index.html
+++ b/index.html
@@ -153,15 +153,15 @@
               </div>
             </div>
             <div class="feature-strip">
-              The power-packed <strong>OpenMetadata 0.10.1 Release</strong> is
-              here. Watch the
+              Get the best in Data Collaboration with <strong>OpenMetadata 0.11.0 Release</strong>.
+              Watch the
               <a
-                href="https://www.youtube.com/c/OpenMetadataChannel"
+                href="https://www.youtube.com/watch?v=V_HkZsMkvho"
                 target="_blank"
                 >demo</a
               >
               or
-              <a href="https://blog.open-metadata.org/" target="_blank"
+              <a href="https://blog.open-metadata.org/openmetadata-0-11-release-8b82c85636a" target="_blank"
                 >read more</a
               >.
             </div>
