Update blogs and meeting section

--- a/community.html
+++ b/community.html
@@ -288,14 +288,14 @@
                           <iframe
                             width="100%"
                             height="325"
-                            src="https://www.youtube.com/embed/cZdIobCpI9U"
+                            src="https://www.youtube.com/embed/V_HkZsMkvho"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                           ></iframe>
                           <p class="fw-600 mb-0 mt-2">
-                            OpenMetadata 0.9.0 Release
+                            OpenMetadata 0.11 Release
                           </p>
                         </div>
                       </div>
@@ -306,13 +306,13 @@
                           <iframe
                             width="100%"
                             height="325"
-                            src="https://www.youtube.com/embed/5hA5dr5iVgw"
+                            src="https://www.youtube.com/embed/Wq257xMYLXs"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                           ></iframe>
-                          <p class="fw-600 mb-0 mt-2">Feb 23rd, 2022</p>
+                          <p class="fw-600 mb-0 mt-2">June 29th, 2022</p>
                         </div>
                       </div>
                     </div>
