Update Content for release 0.11

--- a/index.html
+++ b/index.html
@@ -153,15 +153,17 @@
               </div>
             </div>
             <div class="feature-strip">
-              Get the best in Data Collaboration with <strong>OpenMetadata 0.11.0 Release</strong>.
-              Watch the
+              Get the best in Data Collaboration with
+              <strong>OpenMetadata 0.11.0 Release</strong>. Watch the
               <a
                 href="https://www.youtube.com/watch?v=V_HkZsMkvho"
                 target="_blank"
                 >demo</a
               >
               or
-              <a href="https://blog.open-metadata.org/openmetadata-0-11-release-8b82c85636a" target="_blank"
+              <a
+                href="https://blog.open-metadata.org/openmetadata-0-11-release-8b82c85636a"
+                target="_blank"
                 >read more</a
               >.
             </div>
@@ -313,7 +315,7 @@
                   </div>
                   <a
                     class="btn btn-primary fw-500"
-                    href="https://docs.open-metadata.org/deploy/deploy-on-kubernetes"
+                    href="https://docs.open-metadata.org/deploy/local-deployment"
                     target="_blank"
                     >Deploy in Production</a
                   >
@@ -466,7 +468,7 @@
                   <p>Helping data engineers win their time back!</p>
                   <a
                     class="small text-arrow-icon"
-                    href="https://docs.open-metadata.org/features"
+                    href="https://docs.open-metadata.org/overview/features"
                     target="_blank"
                   >
                     Learn More
@@ -477,7 +479,7 @@
                   <div class="mb-4">
                     <img
                       class="img-fluid shadow-lg rounded-3"
-                      src="images/feature01.jpg"
+                      src="images/feature01.png"
                       alt="feature01"
                       loading="lazy"
                     />
@@ -491,7 +493,7 @@
                   <div class="mb-4">
                     <img
                       class="img-fluid shadow-lg rounded-3"
-                      src="images/feature02.jpg"
+                      src="images/feature02.png"
                       alt="feature02"
                       loading="lazy"
                     />
@@ -520,7 +522,7 @@
                       </p>
                       <a
                         class="small text-arrow-icon"
-                        href="https://docs.open-metadata.org/features"
+                        href="https://docs.open-metadata.org/overview/features#activity-feeds"
                         target="_blank"
                       >
                         Learn More
@@ -546,7 +548,7 @@
                   <p>Serves as an organizational memory of data!</p>
                   <a
                     class="small text-arrow-icon"
-                    href="https://docs.open-metadata.org/features#metadata-versioning"
+                    href="https://docs.open-metadata.org/overview/features#metadata-versioning"
                     target="_blank"
                   >
                     Learn More
@@ -569,7 +571,7 @@
                   <div class="mb-4">
                     <img
                       class="img-fluid shadow-lg rounded-3"
-                      src="images/feature04.jpg"
+                      src="images/feature04.png"
                       alt="feature04"
                       loading="lazy"
                     />
@@ -588,7 +590,7 @@
                   <p>View the lineage at each entity level!</p>
                   <a
                     class="small text-arrow-icon"
-                    href="https://docs.open-metadata.org/features#data-lineage"
+                    href="https://docs.open-metadata.org/overview/features#data-lineage"
                     target="_blank"
                   >
                     Learn More
@@ -743,23 +745,6 @@
                     loading="lazy"
                   />
                   <h5>Druid</h5>
-                </div>
-                <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
-                  data-aos="fade-up"
-                >
-                  <a
-                    href="https://docs.open-metadata.org/integrations/connectors/elastic-search"
-                    target="_blank"
-                  >
-                    <img
-                      src="images/services/elasticsearch.png"
-                      class="media-img mb-2"
-                      alt="service-elasticsearch"
-                      loading="lazy"
-                    />
-                    <h5>Elasticsearch</h5>
-                  </a>
                 </div>
                 <div
                   class="col-lg-2 col-md-3 mb-4 text-center"
@@ -949,18 +934,6 @@
                     />
                     <h5>Postgres</h5>
                   </a>
-                </div>
-                <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
-                  data-aos="fade-up"
-                >
-                  <img
-                    src="images/services/perfect.png"
-                    class="media-img mb-2"
-                    alt="service-perfect"
-                    loading="lazy"
-                  />
-                  <h5>Prefect</h5>
                 </div>
                 <div
                   class="col-lg-2 col-md-3 mb-4 text-center"
@@ -1535,14 +1508,14 @@
                   </li>
                   <li class="mb-2">
                     <a
-                      href="https://docs.open-metadata.org/openmetadata/schemas"
+                      href="https://docs.open-metadata.org/metadata-standard/schemas"
                       target="_blank"
                       >Schemas</a
                     >
                   </li>
                   <li class="mb-2">
                     <a
-                      href="https://docs.open-metadata.org/openmetadata/apis"
+                      href="https://docs.open-metadata.org/metadata-standard/apis"
                       target="_blank"
                       >APIs</a
                     >
@@ -1556,7 +1529,7 @@
                   </li>
                   <li>
                     <a
-                      href="https://docs.open-metadata.org/install/metadata-ingestion"
+                      href="https://docs.open-metadata.org/integrations/metadata-ingestion"
                       target="_blank"
                       >Ingestion</a
                     >
