Update connectors grid layout

--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
               </div>
               <div class="row gx-5">
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -647,7 +647,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -659,7 +659,7 @@
                   <h5>Amundsen</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -676,7 +676,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -688,7 +688,7 @@
                   <h5>Atlas</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -705,7 +705,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -718,7 +718,7 @@
                 </div>
 
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -735,7 +735,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -747,7 +747,7 @@
                   <h5>Druid</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -764,7 +764,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -781,7 +781,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -799,7 +799,7 @@
                 </div>
 
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -816,7 +816,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -833,7 +833,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -850,7 +850,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -867,7 +867,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -884,7 +884,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -902,7 +902,7 @@
                 </div>
 
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -919,7 +919,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -936,7 +936,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -953,7 +953,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -965,7 +965,7 @@
                   <h5>Pulsar</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -983,7 +983,7 @@
                 </div>
 
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1000,7 +1000,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1017,7 +1017,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1034,7 +1034,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1051,7 +1051,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1068,7 +1068,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1086,7 +1086,7 @@
                 </div>
 
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1103,7 +1103,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1120,7 +1120,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -1132,7 +1132,7 @@
                   <h5>SQLAlchemy</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -1144,7 +1144,7 @@
                   <h5>LDAP</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -1156,7 +1156,7 @@
                   <h5>ClickHouse</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1174,7 +1174,7 @@
                 </div>
 
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1191,7 +1191,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1208,7 +1208,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -1220,7 +1220,7 @@
                   <h5>Apache Iceberg</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <img
@@ -1232,7 +1232,7 @@
                   <h5>Power BI</h5>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a
@@ -1249,7 +1249,7 @@
                   </a>
                 </div>
                 <div
-                  class="col-lg-2 col-md-3 mb-4 text-center"
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
                   data-aos="fade-up"
                 >
                   <a href="#" target="_blank">
